[package]
name = "pyo3_async_hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyo3_async_hello"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
async-std = "1"
pyo3-asyncio = { git = "https://github.com/awestlake87/pyo3-asyncio", features = [
    "async-std-runtime",
] }
